apps/unifi/base/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unifi
  labels:
    app: unifi
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: unifi
  template:
    metadata:
      labels:
        app: unifi
    spec:
      volumes:
        - name: config
          nfs:
            path: "/k8s-volumes/persistent/unifi/config"
            server: 10.10.0.10
      containers:
        - name: unifi
          image: lscr.io/linuxserver/unifi-controller:8.0.7
          resources:
            requests:
              memory: "56Mi"
              cpu: "100m"
            limits:
              memory: "8Gi"
              cpu: "4"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3478
              protocol: UDP
            - containerPort: 10001
              protocol: UDP
            - containerPort: 8080
            - containerPort: 8443
            - containerPort: 1900
              protocol: UDP
            - containerPort: 8843
            - containerPort: 8880
            - containerPort: 6789
            - containerPort: 5514
              protocol: UDP
          volumeMounts:
            - name: config
              mountPath: /config
              readOnly: false
