apps/unifi/base/StatefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: unifi
  labels:
    app: unifi
spec:
  serviceName: unifi
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: unifi
  template:
    metadata:
      labels:
        app: unifi
    spec:
      volumes:
        - name: config
          nfs:
            path: "/mnt/NAS-T/k8s-volumes/persistent/unifi/config"
            server: 10.10.20.10
      containers:
        - name: unifi
          image: lscr.io/linuxserver/unifi-network-application:10.6.106-ls146@sha256:7f15f34937ce928b36d915a0ad4ab6a915a0c34e87affa10c47d09ad1341b848
          resources:
            requests:
              memory: "56Mi"
              cpu: "100m"
            limits:
              memory: "8Gi"
              cpu: "4"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3478
              protocol: UDP
            - containerPort: 10001
              protocol: UDP
            - containerPort: 8080
            - containerPort: 8443
            - containerPort: 1900
              protocol: UDP
            - containerPort: 8843
            - containerPort: 8880
            - containerPort: 6789
            - containerPort: 5514
              protocol: UDP
          volumeMounts:
            - name: config
              mountPath: /config
              readOnly: false
