apps/unifi/base/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: unifi
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.152
  selector:
    app: unifi
  ports:
    - name: comms
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: web
      protocol: TCP
      port: 443
      targetPort: 8443
    - name: guest-portal-https
      protocol: TCP
      port: 8843
      targetPort: 8843
    - name: guest-portal-http
      protocol: TCP
      port: 8880
      targetPort: 8880
    - name: throughput-test
      protocol: TCP
      port: 6789
      targetPort: 6789
    - name: stun
      protocol: UDP
      port: 3478
      targetPort: 3478
    - name: ap-discovery
      protocol: UDP
      port: 10001
      targetPort: 10001
    - name: controller-discovery
      protocol: UDP
      port: 1900
      targetPort: 1900
    - name: syslog
      protocol: UDP
      port: 5514
      targetPort: 5514
