apps/unifi/base/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unifi-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-classic-prod"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: internal-nginx
  tls:
    - hosts:
        - unifi.nahue.ar
      secretName: unifi
  rules:
    - host: unifi.nahue.ar
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: unifi
                port:
                  number: 443
